UDP-11407: Updated Spring Boot with openrewrite